главное меню, экран смерти, реплей

--- a/style.css
+++ b/style.css
@@ -11,6 +11,39 @@ body {
 	font-size: 4vh;
 }
 
+.screen {
+	background: #00000055;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: flex;
+	justify-content: space-around;
+}
+
+.col {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+button {
+	font-size: 4vh;
+	width: 30vw;
+	border: 0.5rem solid #bde0fe;
+	border-radius: 1rem;
+	padding: 0.5rem 1rem;
+	font-weight: bold;
+	background: #a2d2ff;
+	color: #003049;
+}
+
+button.danger {
+	border: 0.5rem solid #febdbd;
+	background: #ffa2a2;
+	color: #490000;
+}
+
 #rotate {
 	display: none;
 	height: 100%;
